<resources>
    <string name="app_name">Story App</string>
    <string name="enter_password">Enter password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="username">Tude Prayatna</string>
    <string name="userEmail">tude@gmail.com</string>
    <string name="general">General\n</string>
    <string name="choose_language">Choose Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="confirmation_message">Are you sure?</string>
    <string name="yes">Yeah</string>
    <string name="no">Nah</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_description_here">Enter your description here...</string>
    <string name="upload">Upload</string>
    <string name="enter_your_title_here">Enter your title here...</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="has_account">Already have account?</string>
    <string name="has_no_account">Register</string>
    <string name="enter_email">Enter your email here</string>
    <string name="email_required">Email Required</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="appwidget_text">STORY LIST</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">Empty</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal Type</string>
    <string name="satellite_type">Satellite Type</string>
    <string name="terrain_type">Terrain Type</string>
    <string name="hybrid_type">Hybrid Type</string>
    <string name="retry">Retry</string>
    <string name="location">Location</string>
</resources>